window position fixed on mobile

--- a/css/explorer.css
+++ b/css/explorer.css
@@ -41,6 +41,10 @@ tr {
 	cursor: pointer;
 }
 
+:focus {
+
+}
+
 .windows {
 	height: 100vh;
 
@@ -204,8 +208,6 @@ div.ui-icon-gripsmall-diagonal-se {
 	.window {
 		height: 100vh;
 		width: 100vw;
-
-		position: absolute !important;
 	}
 
 	.sidebar {
